# sky

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
docs/: protocol.md  sky-window2-api.md  testing.md
scripts/: check.ps1  package-release.ps1  smoke-stdio.mjs
src/: approval.rs  budget.rs  main.rs  policy.rs  router.rs  turn.rs
src/protocol/: frame.rs  jsonrpc.rs  mod.rs  pipe.rs  stdio.rs
src/windows/: discovery.rs  input.rs  mod.rs  screenshot_wgc.rs  uia.rs
tests/cases/: 001-list-windows.json  002-list-apps.json  003-get-window.json  004-get-window-state-text.json  005-get-window-state-screenshot.json
tests/fixtures/: focused-selection-fixture.ps1  input-fixture.ps1  occluded-screenshot-fixture.ps1
tests/runners/: ab-actions.mjs  ab-readonly.mjs  helper-stdio.mjs  original-sky-runner.mjs  rust-helper-runner.mjs  rust-input-fixture.mjs  rust-native-pipe-approval-timeout.mjs  rust-native-pipe-approval.mjs  rust-occluded-screenshot-fixture.mjs  rust-turn-interrupt.mjs  rust-uia-selection-fixture.mjs
