[package]
name = "sky"
version = "0.1.0"
edition = "2024"
description = "Sky-compatible Windows Computer Use helper written in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["automation", "computer-use", "sky", "windows", "uia"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
anyhow = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
windows = { version = "0.61", features = [
  "Foundation",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_Com",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_UI_Accessibility"
] }

[dev-dependencies]
pretty_assertions = "1"

